removing guava and updating dependencies